--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   uuid: ^3.0.7
+  shared_preferences: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -60,6 +61,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/images/ico/ic_launcher.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
